added whatsapp integration

--- a/Boutique-FE/src/index.html
+++ b/Boutique-FE/src/index.html
@@ -15,5 +15,27 @@
 </head>
 <body>
   <app-root></app-root>
+  <a href="https://wa.me/9600665848" class="whatsapp-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Chat" />
+  </a>
+  <style>
+    .whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #25D366;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.whatsapp-button img {
+  width: 40px;
+}
+  </style>
 </body>
 </html>
